--- a/champion/index.html
+++ b/champion/index.html
@@ -57,6 +57,26 @@
 
         <ul class="letterhead letterend">
 
+          <h5>2024</h5>
+
+          <h5 class="linebreak small"><i>Arts</i></h5>
+          <h5><a href="../url/-com/vianetdjenguet/" title="Vianet Djenguet" target="_blank">Vianet Djenguet</a>, <font class="en">wildlife cinematographer</font><font class="fr">directeur de la photographie animalière</font> &nbsp;<b>&middot;</b>&nbsp; <i>Silverback</i> (<font class="fr">&nbsp;</font>film, 2024<font class="fr">&nbsp;</font>)</h5>
+          <p><font class="en">Recognized for cinematography of gorrilas in the Republic of Congo.</font><font class="fr">Reconnu pour la cinématographie de la nature en République du Congo.</font></p>
+
+          <h5 class="linebreak small"><i>Sciences</i></h5>
+          <h5>Dominique Gonçalvez, <font class="en">elephant ecologist</font><font class="fr">écologiste des éléphants</font> &nbsp;<b>&middot;</b>&nbsp; <a href="../url/-org/gorongosa-elephant-ecology-project/" title="Gorongosa National Park / Science / Elephant Ecology Project" target="_blank">Gorongosa Elephant Ecology Project</a></h5>
+          <p><font class="en">Recognized for developmental research on human-elephant coexistence in Mozambique.</font><font class="fr">Reconnu pour ses recherches développementales sur la coexistence homme-éléphant au Mozambique.</font></p>
+
+        </ul>
+
+      </div>
+
+      <pre class="thin"></pre>
+
+      <div class="clear text-center">
+
+        <ul class="letterhead letterend">
+
           <h5>2023</h5>
 
           <h5 class="linebreak small"><i>Arts</i>, <i>Journalism</i></h5>
@@ -280,7 +300,7 @@
 
   <footer class="single">
     <div class="quote" id="footnotes">
-      <p class="small"><sup>1</sup> <font class="en">Principal members are nominated in September of each year by the board of directors at Animat Habitat in recognition of champions who have advanced our shared principles on environmental policy and on wildlife conservation and so on. Principal members are granted an indefinite membership with priority and priviledged access to computer art studio services in furtherance of environmental policy and wildlife conservation and so on. No solicitation is accepted for this honorary membership. No sum is awarded.</font><font class="fr">Les membres principaux sont nommés en septembre de chaque année par le conseil d'administration chez Animat Habitat en reconnaissance des champions qui ont fait progresser nos principes en communs en matière de politique environnementale et de conservation de la nature et ainsi de suite. Les membres principaux se voient accorder une adhésion indéfinie avec un accès prioritaire et privilégié aux services de studio d'art informatique pour faire progresser la politique environnementale et la conservation de la nature et ainsi de suite. Aucune sollicitation n'est acceptée. Aucune somme n'est attribuée.</font></p>
+      <p class="small"><sup>1</sup>&nbsp; <font class="en">Principal members are nominated in September of each year by the board of directors at Animat Habitat in recognition of champions who have advanced our shared principles on environmental policy and on wildlife conservation and so on. Principal members are granted an indefinite membership with priority and priviledged access to computer art studio services in furtherance of environmental policy and wildlife conservation and so on. No solicitation is accepted for this honorary membership. No sum is awarded.</font><font class="fr">Les membres principaux sont nommés en septembre de chaque année par le conseil d'administration chez Animat Habitat en reconnaissance des champions qui ont fait progresser nos principes en communs en matière de politique environnementale et de conservation de la nature et ainsi de suite. Les membres principaux se voient accorder une adhésion indéfinie avec un accès prioritaire et privilégié aux services de studio d'art informatique pour faire progresser la politique environnementale et la conservation de la nature et ainsi de suite. Aucune sollicitation n'est acceptée. Aucune somme n'est attribuée.</font></p>
 
     </div>
 
@@ -311,17 +331,13 @@
   var toggle_2018_m = document.getElementById("in-mem-2018"),
       toggle_2018_a = document.getElementById("in-mem-2018-a"),
       toggle_2022_m = document.getElementById("in-mem-2022"),
-      toggle_2022_a = document.getElementById("in-mem-2022-a"),
-      toggle_2024_m = document.getElementById("in-mem-2024"),
-      toggle_2024_a = document.getElementById("in-mem-2024-a");
+      toggle_2022_a = document.getElementById("in-mem-2022-a");
 
   toggle_2018_m.style.display = "none";
   toggle_2018_a.style.display = "block";
 
   toggle_2022_m.style.display = "none";
   toggle_2022_a.style.display = "block";
-
-  toggle_2024_a.style.display = "none";
 
   function toggle_2018m() {
     if (toggle_2018_m.style.display == "none") {
@@ -342,17 +358,6 @@
     else {
       toggle_2022_m.style.display = "none";
       toggle_2022_a.style.display = "block";
-    }
-  };
-
-  function toggle_2024m() {
-    if (toggle_2024_m.style.display == "none") {
-      toggle_2024_m.style.display = "block";
-      toggle_2024_a.style.display = "none";
-    }
-    else {
-      toggle_2024_m.style.display = "none";
-      toggle_2024_a.style.display = "block";
     }
   };
 
