--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
   <nav>
     <ul class="home">
       <li class="crumb logo"><a title="Animat Habitat"><img src="inc/svg/animat.mark.1.1.1200.dark.svg" class="logo" alt="Animat Mark &ndash; Dark &copy; Animat Habitat, 2015" /></a></li>
-      <li class="crumb btn color-one"><a href="scene/one/" title="Animat Habitat scene one, scène un.">I</a></li>
-      <!-- <li class="crumb btn color-two"><a href="scene/two/" title="Animat Habitat scene two, scène deux.">II</a></li> -->
-      <!-- <li class="crumb btn color-three"><a href="scene/three/" title="Animat Habitat scene three, scène trois.">III</a></li> -->
+      <li class="crumb btn color-one"><a href="scene/i/" title="Animat Habitat scene one, scène un.">I</a></li>
+      <!-- <li class="crumb btn color-two"><a href="scene/ii/" title="Animat Habitat scene two, scène deux.">II</a></li> -->
+      <!-- <li class="crumb btn color-three"><a href="scene/iii/" title="Animat Habitat scene three, scène trois.">III</a></li> -->
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en français, in english."><font class="en">fr</font><font class="fr">en</font></a></li>
       <li class="right btn"><a href="patron/" title="Animat Habitat patrons.">Patron</a></li>
       <li class="right btn"><a href="boutique/" title="Animat Habitat boutique.">Boutique</a></li>
@@ -77,7 +77,7 @@
         </div>
 
         <div>
-          <a class="project-vignette" href="scene/one/" title="Animat Habitat scene one, scène un.">
+          <a class="project-vignette" href="scene/i/" title="Animat Habitat scene one, scène un.">
             <img src="inc/img/01/we.cover.banner.480-160.jpg" width="480" height="160" alt="Animat Habitat scene one: White Elephant cover art, 2024." />
             <div class="bg-one">
               <h3><font class="color-one">I&nbsp; White Elephant (<font class="fr">&nbsp;</font>&ndash;<font class="fr">&nbsp;</font>)</font></h3>
@@ -160,7 +160,7 @@
 
         <pre class="thin"></pre>
 
-        <p class="linebreak small"><font class="en">Animat Habitat official website designed and developed by <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.</font><font class="fr">Animat Habitat site officiel conçu et développé par <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts&nbsp;: <i>Oswald</i>, et puis archivé avec les pages GitHub. Les zones protégées de ce site Web non desservies sur GitHub sont hébergées au Canada et alimentées par des énergies renouvelables.</font></p>
+        <p class="linebreak small"><font class="en">Animat Habitat official website designed and developed by <a href="url/git/periwinkle/" title="Periwinkle Blue, a terribly partial publishing house.">Periwinkle Blue</a> with the open-source WordPress and Automattic WooCommerce information architecture, with Google Fonts: <i>Oswald</i> [Extra-Light, Medium], and then archived with GitHub pages. Protected areas of this website not served on GitHub are hosted in Canada and powered by renewable energy.</font><font class="fr">Animat Habitat site officiel conçu et développé par <a href="url/git/danealeksander/" title="Dane Aleksander, graphic artist.">Dane Aleksander</a> avec l'architecture d'information WordPress et WooCommerce, avec Google Fonts&nbsp;: <i>Oswald</i>, et puis archivé avec les pages GitHub. Les zones protégées de ce site Web non desservies sur GitHub sont hébergées au Canada et alimentées par des énergies renouvelables.</font></p>
 
         <p class="linebreak small">Animat Habitat <a href="index/" title="Animat Habitat official website index, index du site officiel."><font class="en">Site Index</font><font class="fr">Index du site Web.</font></a></p>
 
