--- a/index/index.html
+++ b/index/index.html
@@ -46,16 +46,16 @@
         <p>Animat Habitat <a href="../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
         <h5 class="linebreak title"><font class="color-one">I&nbsp; White Elephant</font></h5>
-        <p>Animat Habitat <a href="../scene/one/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
-        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène un</font> &ndash; <a href="../scene/one/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/i/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène un</font> &ndash; <a href="../scene/i/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II&nbsp; White Tiger</font></h5>
-        <p>Animat Habitat <a href="../scene/two/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
-        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène deux</font> &ndash; <a href="../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/ii/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène deux</font> &ndash; <a href="../scene/ii/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-three">III&nbsp; White Bear</font></h5>
-        <p>Animat Habitat <a href="../scene/three/" title="Animat Habitat scene three, scène trois."><font class="en">Scene Three</font><font class="fr">Scène trois</font></a></p>
-        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène trois</font> &ndash; <a href="../scene/three/history-of-whales-anatomy/" title="Animat Habitat scene two, scène deux. A History of Whales, Anatomy.">A History of Whales</a> &hellip;</p>
+        <p>Animat Habitat <a href="../scene/iii/" title="Animat Habitat scene three, scène trois."><font class="en">Scene Three</font><font class="fr">Scène trois</font></a></p>
+        <p>Animat Habitat <font class="en">Scene Two</font><font class="fr">Scène trois</font> &ndash; <a href="../scene/iii/history-of-whales-anatomy/" title="Animat Habitat scene two, scène deux. A History of Whales, Anatomy.">A History of Whales</a> &hellip;</p>
 
         <h5 class="letterhead title">Boutique</h5>
         <p>Animat Habitat <a href="../boutique/" title="Animat Habitat boutique.">Boutique</a></p>
