--- a/patron/confirmation/index.html
+++ b/patron/confirmation/index.html
@@ -40,12 +40,12 @@
         <p><font class="en">For active and select council members, you can find documents of the organization archived and classified in the Animat Habitat <a href="../../s/" title="Animat Habitat member handbook, manuel des membres.">Member Handbook</a>. For members of a project broadcast, a behind-the-scenes campaign will be delivered to your inbox in advance of project publications. You can find articles at Animat Habitat archived on the project pages.</font><font class="fr">Pour les membres actifs, retrouvez les documents d'organisation archivés et classés dans le <a href="../../s/" title="Animat Habitat member handbook, manuel des membres.">manuel des membres</a> Animat Habitat. Pour les membres des mises à jour d'un projet, la campagne dans les coulisses sera livrée à votre address e-mail en avance de la publication du projet. Veuillez trouver les articles chez Animat Habitat archivés sur les pages du projet.</font></p>
 
         <h5 class="linebreak title"><font class="color-one">I. White Elephant</font></h5>
-        <p>Animat Habitat <a href="../../scene/one/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
-        <p>Animat Habitat <font class="en">Scene One</font><font class="fr">Scène un</font> &ndash; <a href="../../scene/one/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/i/" title="Animat Habitat scene one, scène un."><font class="en">Scene One</font><font class="fr">Scène un</font></a></p>
+        <p>Animat Habitat <font class="en">Scene One</font><font class="fr">Scène un</font> &ndash; <a href="../../scene/i/making-of-ella/" title="Animat Habitat scene one, scène un. Making of Ella, 1.">Making of Ella</a> &hellip;</p>
 
         <h5 class="linebreak title"><font class="color-two">II. White Tiger</font></h5>
-        <p>Animat Habitat <a href="../../scene/two/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
-        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/two/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
+        <p>Animat Habitat <a href="../../scene/ii/" title="Animat Habitat scene two, scène deux."><font class="en">Scene Two</font><font class="fr">Scène deux</font></a></p>
+        <p>Animat Habitat Scene Two &ndash; <a href="../../scene/ii/the-beginning-of-painting/" title="Animat Habitat scene two, scène deux. The Beginning of Painting.">The Beginning of Painting</a> &hellip;</p>
 
       </div>
 
