--- a/scene/ii/tiger-conservation-siberia/index.html
+++ b/scene/ii/tiger-conservation-siberia/index.html
@@ -28,8 +28,8 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Two) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene two. &ndash;&nbsp;sc&egrave;ne deux.">II</a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Two &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.two.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene two, scène deux.">II</a></li>
       <li class="crumb scene color"><a><i>Tiger Conservation in Siberia</i></a></li>
     </ul>
   </nav>
@@ -60,7 +60,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2022 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">This article was edited March 2025.</p>
+
+      <p class="linebreak small">Copyright &copy; 2022-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
