--- a/scene/iii/history-of-whales-communication/index.html
+++ b/scene/iii/history-of-whales-communication/index.html
@@ -28,17 +28,17 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Three) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li>
-      <li class="crumb scene color"><a><i>A History of Whales</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Three &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene three, scène trois.">III</a></li>
+      <li class="crumb scene color"><a><i>A History of Whales &ndash; White Noise</i></a></li>
     </ul>
   </nav>
 
   <section>
     <article>
       <div>
-        <h4 class="letterhead thin">December 2024</h4>
-        <h2 class="color">A History of Whales &ndash; White Noise</h2>
+        <h4 class="letterhead thin">June 2024</h4>
+        <h2 class="color">Song of the Whale</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
       </div>
@@ -51,8 +51,8 @@
 
       <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../history-of-whales-north-atlantic-right-whale/" rel="prev"><font class="toggle-form-full">A History of Whales &ndash;&nbsp;Black Whale /</font><font class="toggle-form-break">Previous Article /</font></a>
-          <!-- <a class="nav-next" href="../history-of-whales-beluga/" rel="next"><font class="toggle-form-full">/ A History of Whales &ndash;&nbsp;White Whale</font><font class="toggle-form-break">/ Next Article</font></a> -->
+          <a class="nav-previous" href="../history-of-whales-north-atlantic-right/" rel="prev"><font class="toggle-form-full">A History of Whales &ndash;&nbsp;Anatomy /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <!-- <a class="nav-next" href="../history-of-whales-beluga/" rel="next"><font class="toggle-form-full">/ A History of Whales &ndash;&nbsp;White Noise</font><font class="toggle-form-break">/ Next Article</font></a> -->
         </div>
       </div>
 
@@ -61,7 +61,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2024 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">This article was edited March 2025.</p>
+
+      <p class="linebreak small">Copyright &copy; 2024-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
