--- a/scene/iii/history-of-whales-north-atlantic-right/index.html
+++ b/scene/iii/history-of-whales-north-atlantic-right/index.html
@@ -28,9 +28,9 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Three) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
-      <li class="crumb btn color"><a href="../" title="Animat Habitat scene three. &ndash;&nbsp;sc&egrave;ne trois.">III</a></li>
-      <li class="crumb scene color"><a><i>North Atlantic Right Whale &ndash; Anatomy</i></a></li>
+      <li class="crumb logo color"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark &ndash; Three &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.three.svg"/></a></li>
+      <li class="crumb btn color"><a href="../" title="Animat Habitat scene three, scène trois.">III</a></li>
+      <li class="crumb scene color"><a><i>A History of Whales &ndash; Black Whale</i></a></li>
     </ul>
   </nav>
 
@@ -38,22 +38,24 @@
     <article>
       <div>
         <h4 class="letterhead thin">June 2023</h4>
-        <h2 class="color">A History of Whales &ndash; Anatomy</h2>
+        <h2 class="color">The Right Whale</h2>
         <h5 class="author"><a href="../../../url/git/danealeksander/" rel="author" target="_blank" title="Dane Aleksander">Dane Aleksander</a>, art director at Animat Habitat.</h5>
 
-        <h3 class="linebreak">Anatomy of a Right Whale</h3>
+        <p class="linebreak"><i>Canada &ndash; the northern part of Turtle Island sans so-called Alaska &ndash; boasts the longest coastline of any country in the world. This northern Native land spans the Arctic, Atlantic and Pacific oceans. And these coastal ecosystems contribute directly to the cultural identity and economic prosperity of many Canadian communities, most of all Indigenous peoples across Turtle Island. Coasts convene some of the most biodiverse ecosystems on the planet. However, increased industrial activity has made seascapes louder and lousier for many of those marine mammals and fishes, endangering whales and whale sharks and so on.</i></p>
 
-        <p>
+        <p class="linebreak"><i>The Right whales, in particular.</i></p>
 
-          Article in review.
+        <!-- southern resident killer whales and Saint Lawrence beluga whales -->
 
-        </p>
+        <h3 class="linebreak">North Atlantic Right Whale</h3>
+
+        <p>Article in review.</p>
 
       </div>
 
       <div class="clear article-navigation" role="navigation">
         <div class="nav-links">
-          <a class="nav-previous" href="../../one/history-of-whales-north-atlantic-right-whale/" rel="prev"><font class="toggle-form-full">A History of Whales &ndash;&nbsp;Black Whale /</font><font class="toggle-form-break">Previous Article /</font></a>
+          <a class="nav-previous" href="../history-of-whales-anatomy/" rel="prev"><font class="toggle-form-full">A History of Whales &ndash;&nbsp;Anatomy /</font><font class="toggle-form-break">Previous Article /</font></a>
           <a class="nav-next" href="../history-of-whales-communication/" rel="next"><font class="toggle-form-full">/ A History of Whales &ndash;&nbsp;White Noise</font><font class="toggle-form-break">/ Next Article</font></a>
         </div>
       </div>
@@ -63,7 +65,9 @@
 
   <footer>
     <div class="quote">
-      <p class="small">Copyright &copy; 2023 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
+      <p class="small">This article was edited March 2025.</p>
+
+      <p class="linebreak small">Copyright &copy; 2023-2025 Animat Habitat. <a href="../../../c/" target="_blank" title="Terms at Animat Habitat">Terms of Access</a>.</p>
 
     </div>
 
