--- a/url/doi/10-1016-j-celrep-2018-07-042/index.html
+++ b/url/doi/10-1016-j-celrep-2018-07-042/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://doi.org/10.1016/j.celrep.2018.07.042/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://doi.org/10.1016/j.celrep.2018.07.042" /></head></html>
