--- a/canon/index.html
+++ b/canon/index.html
@@ -42,12 +42,12 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Canon 1.0 p 2 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p2.72ppi.jpg" />
+          <img alt="Canon 1.0 p&nbsp;2 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p2.72ppi.jpg" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Canon 1.0 p 1 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p1.72ppi.jpg" />
+          <img alt="Canon 1.0 p&nbsp;1 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p1.72ppi.jpg" />
 
         </div>
 
@@ -87,12 +87,12 @@
 
       <div class="clear diptych ptych-fixed">
         <div class="clear ptych-left">
-          <img alt="Canon 1.0 p 134 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p134.72ppi.jpg" />
+          <img alt="Canon 1.0 p&nbsp;134 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p134.72ppi.jpg" />
 
         </div>
 
         <div class="clear ptych-right">
-          <img alt="Canon 1.0 p 135 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p135.72ppi.jpg" />
+          <img alt="Canon 1.0 p&nbsp;135 &copy; Animat Habitat, 2015" src="../inc/img/canon/animat.canon.1.0.p135.72ppi.jpg" />
 
         </div>
       </div>
