--- a/url/doi/10-2307-3503889/index.html
+++ b/url/doi/10-2307-3503889/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=https://doi.org/10.2307/3503889/" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://doi.org/10.2307/3503889" /></head></html>
