--- a/scene/i/index.html
+++ b/scene/i/index.html
@@ -327,7 +327,7 @@
       <p class="small"><font class="small">Zambezi &ndash; Disney Nature <i>Elephant: In the Footprints of Elephant</i> (<font class="en">documentary</font><font class="fr">&nbsp;documentaire</font>, 2020<font class="fr">&nbsp;</font>) &ndash; Elephants Without Borders</font></p>
 
       <p class="linebreak small"><font class="title">Luggard &middot;&nbsp;Maisha</font></p>
-      <p class="small"><font class="small">Ithumba (<font class="fr">&nbsp;</font>c.2016-2021<font class="fr">&nbsp;</font>)</font></p>
+      <p class="small"><font class="small">Tsavo East (<font class="fr">&nbsp;</font>c.2016-2021<font class="fr">&nbsp;</font>)</font></p>
 
       <p class="linebreak small"><font class="title">Tolstoy</font></p>
       <p class="small"><font class="small">Amboseli (<font class="fr">&nbsp;</font>1971-2022<font class="fr">&nbsp;</font>)</font></p>
@@ -346,10 +346,13 @@
       <p class="small"><font class="small">Enduimet (<font class="fr">&nbsp;</font>1987-2024<font class="fr">&nbsp;</font>)</font></p>
 
       <p class="linebreak small"><font class="title">Mokogodo</font></p>
-      <p class="small"><font class="small">Nairobi (<font class="fr">&nbsp;</font>2022-2024<font class="fr">&nbsp;</font>)</font></p>
+      <p class="small"><font class="small">Laikipia (<font class="fr">&nbsp;</font>2022-2024<font class="fr">&nbsp;</font>)</font></p>
 
       <p class="linebreak small"><font class="title">Paolo</font></p>
       <p class="small"><font class="small">Amboseli (<font class="fr">&nbsp;</font>1979-2025<font class="fr">&nbsp;</font>)</font></p>
+
+      <p class="linebreak small"><font class="title">Tali</font></p>
+      <p class="small"><font class="small">Oldonyiro (<font class="fr">&nbsp;</font>2023-2025<font class="fr">&nbsp;</font>)</font></p>
 
     </div>
 
