--- a/scene/ii/index.html
+++ b/scene/ii/index.html
@@ -7,7 +7,7 @@
 
   <meta name="author" content="Dane Aleksander" />
   <meta name="company" content="Animat Habitat" />
-  <meta name="description" content="White Tiger&mdash;oil painting of a tiger in the taiga.&nbsp;&#92;&nbsp;Tigre blanc &mdash; peinture à l’huile d’un tigre dans la ta&iuml;ga." />
+  <meta name="description" content="White Tiger&mdash;oil painting of a tiger in the taiga.&nbsp;&#92;&nbsp;Tigre blanc &mdash; peinture à l’huile d’un tigre dans la taïga." />
   <meta name="keywords" content="white tiger, tiger painting, tiger art, tiger conservation art, taiga" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -75,7 +75,7 @@
 
         </div>
 
-        <p class="linebreak"><font class="en"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.</font><font class="fr"><i>Tigre blanc</i> est une peinture à l'huile d’un tigre dans la ta&iuml;ga. Cette publication est la deuxième d'une série de projets chez Animat Habitat. La peinture originale est photographiée et reproduite en édition limitée en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprimée avec une mate d'un pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie numérique de la photo corrigée et éditée est également disponible.</font></p>
+        <p class="linebreak"><font class="en"><i>White Tiger</i> is an oil painting of an Amur tiger in the taiga. This publication is second in a series of scenes in wildlife art at Animat Habitat. The original painting is photographed and reproduced in limited edition as an archival pigment print on acid-free archival paper, and printed with an inch unprinted matte to allow for framing options and safe handling. The archival pigment prints are available for pre-order in two sizes. A digital copy of the corrected and edited photograph is also available for pre-order.</font><font class="fr"><i>Tigre blanc</i> est une peinture à l'huile d’un tigre dans la taïga. Cette publication est la deuxième d'une série de projets chez Animat Habitat. La peinture originale est photographiée et reproduite en édition limitée en tant que tirage pigmentaire d'archives sur du papier d'archivage sans acide, et imprimée avec une mate d'un pouce non imprimée pour permettre une manipulation en toute sécurité ainsi que des options d'encadrement. Les tirages pigmentaires d'archives sont disponibles en deux tailles. Une copie numérique de la photo corrigée et éditée est également disponible.</font></p>
 
         <p class="linebreak"><font class="en">Exhibition Date:</font><font class="fr">Date d'exposition&nbsp;:</font> &ndash;</p>
 
