--- a/scene/i/history-of-elephants-ivory/index.html
+++ b/scene/i/history-of-elephants-ivory/index.html
@@ -98,7 +98,7 @@
 
         <p class="linebreak">At this time, the United States of America was consuming 200 tons of ivory per year.<sup>&nbsp;[<a class="button" onclick="fn();" title="Hartley, 2013">2</a>]</sup></p>
 
-        <p class="linebreak"><i>Elephants continued to be slaughtered into the 1950s, with influxes of trafficked ivory that corresponded to African regions gaining independence from colonial rule. This meant wars. And elephants were a casualty.</i></p>
+        <p class="linebreak"><i>Elephants continued to be massacred into the 1950s, with influxes of trafficked ivory that corresponded to African regions gaining independence from colonial rule. This meant wars. And elephants were a casualty.</i></p>
 
       </div>
 
