--- a/scene/i/history-of-elephants-ivory/index.html
+++ b/scene/i/history-of-elephants-ivory/index.html
@@ -300,7 +300,7 @@
 
         <p class="linebreak">The three previous years&mdash;2009, 2010 and 2011 listed in the ETIS records in the top five for amount of ivory seized around the world. The MIKE and the ETIS programs, in 2012, had enough data to suggest a close correspondence between trends in elephant poaching and trends in large-scale seizures of ivory. The Parties to CITES recognized that elephant poaching was, again, at a point of crisis, the most critical since the commercial international trade in ivory was banned in 1989.<sup>&nbsp;[<a class="button" onclick="fn_2012();" title="CITES, 2012">20</a>]</sup></p>
 
-        <p class="linebreak">United States Secretary of State Hillary Clinton at an event on &lsquo;Wildlife Trafficking and Conservation: A Call to Action&rsquo; called upon world leaders at every level of the international community to stop the killing of African elephants, to stop the trafficking of African elephant ivory, and to stop the demand for ivory, altogether.<sup>&nbsp;[<a class="button" onclick="fn_2012();" title="CITES, 2012">21</a>]</sup></p>
+        <p class="linebreak">United States of America Secretary of State Hillary Clinton at an event on &lsquo;Wildlife Trafficking and Conservation: A Call to Action&rsquo; called upon world leaders at every level of the international community to stop the killing of African elephants, to stop the trafficking of African elephant ivory, and to stop the demand for ivory, altogether.<sup>&nbsp;[<a class="button" onclick="fn_2012();" title="CITES, 2012">21</a>]</sup></p>
 
       </div>
 
@@ -323,7 +323,7 @@
 
         <p class="linebreak">The African elephant population was estimated at 470,000&mdash;confined to a patchwork of protected areas.<sup>&nbsp;[<a class="button" onclick="fn_2013();" title="IUCN, 2015">26</a>,&nbsp;<a class="button" onclick="fn_2013();" title="Elephant Database, 2015">27</a>]</sup></p>
 
-        <p class="linebreak">United States President Barack Obama, in July, passed an executive order to address wildlife trafficking, including ivory. Then the United States of America crushed 6 tons of ivory &ndash; tusks and trinkets seized in the past twenty-five years &ndash; to publicly address the illegal action and international corruption, which predicate this poaching crisis. That crush, in November, along with an earlier ivory crush in the Republic of the Philippines, in June, marked the first two times ivory-consuming nation-states made such a statement.<sup>&nbsp;[<a class="button" onclick="fn_2013();" title="The White House, 2013">28</a>,&nbsp;<a class="button" onclick="fn_6();" title="Christy, 2013">29</a>]</sup></p>
+        <p class="linebreak">United States of America President Barack Obama, in July, passed an executive order to address wildlife trafficking, including ivory. Then the United States of America crushed 6 tons of ivory &ndash; tusks and trinkets seized in the past twenty-five years &ndash; to publicly address the illegal action and international corruption, which predicate this poaching crisis. That crush, in November, along with an earlier ivory crush in the Republic of the Philippines, in June, marked the first two times ivory-consuming nation-states made such a statement.<sup>&nbsp;[<a class="button" onclick="fn_2013();" title="The White House, 2013">28</a>,&nbsp;<a class="button" onclick="fn_6();" title="Christy, 2013">29</a>]</sup></p>
 
       </div>
 
