--- a/scene/i/wildlife-documentary-big-tuskers/index.html
+++ b/scene/i/wildlife-documentary-big-tuskers/index.html
@@ -95,7 +95,7 @@
       </div>
 
       <div>
-        <p>The film crowdfunded US$25,000 in a campaign in 2016, and entered festivals in 2018 in the United States as well as in South Africa.</p>
+        <p>The film crowdfunded US$25,000 in a campaign in 2016, and entered festivals in 2018 in the United States of America as well as in South Africa.</p>
 
         <p class="linebreak">The art of <i>Last of the Big Tuskers</i> (2018) was created probono by <a href="../../../url/git/danealeksander-visual-effects-art-of-last-of-the-big-tuskers/" title="Dane Aleksander / Visual Effects of Last of the Big Tuskers (2018)" target="_blank">Dane Aleksander</a>.</p>
 
