--- a/conservation/ile-de-la-tortue/index.html
+++ b/conservation/ile-de-la-tortue/index.html
@@ -572,17 +572,17 @@
 
             <h5><a class="overscore" onclick="toggle_wabanaki();">Wabinaki</a></h5>
             <div class="clear" id="toggle-wabanaki">
-              <p class="small"><i>Peuple de l’aube&mdash;le peuple Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi'kmaq&hellip;</i> <a onclick="toggle_wabanaki();">De plus</a>.</p>
+              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi’kmaq&hellip;</i> <a onclick="toggle_wabanaki();">De plus</a>.</p>
 
             </div>
             <div class="clear" id="wabanaki">
-              <p class="small"><i>Peuple de l’aube&mdash;le peuple Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi'kmaq, les Peskotomuhkati, les Penobscot et les Wolastoqiyik. Ces Premières Nations sont celles qui sont inscrites dans les traités de paix et d’amitié maritimes conclus avec la Couronne. Les territoires Abénakis demeurent non cédés.</i></p>
+              <p class="small"><i>Peuple de l’aube&mdash;les peuples Wabanaki des provinces atlantiques du Canada et des États du nord-est du Maine, de la Nouvelle-Angleterre et, autrefois, du New Hampshire et du Vermont aux États-Unis comprend les Abénaquis, les Mi’kmaq, les Peskotomuhkati, les Penobscot et les Wolastoqiyik. Ces Premières Nations sont celles qui sont inscrites dans les traités de paix et d’amitié maritimes conclus avec la Couronne. Les territoires Abénakis demeurent non cédés.</i></p>
 
               <p class="linebreak small title">Traités de paix et d’amitié (&nbsp;1725-1779&nbsp;)<sup>&nbsp;[&nbsp;<a class="button" onclick="fn();" title="Traités de la Couronne">6</a>&nbsp;]</sup></p>
               <ul class="small">
                 <li>Nation Abénaquise</li>
 
-                <li>Première Nations Mi'kmaq</li>
+                <li>Première Nations Mi’kmaq</li>
 
                 <li>Nation Peskotomuhkati</li>
 
